Added a figure to the test file

--- a/test/test.ltx
+++ b/test/test.ltx
@@ -32,6 +32,11 @@ bloblo
   This is an FXFatal.
 \end{anfxfatal}
 
+\begin{figure}
+  \centering
+  \caption{Caption\fxnote{note}}
+\end{figure}
+
 \printindex
 
 \end{document}
