--- a/fixme.dtx
+++ b/fixme.dtx
@@ -533,10 +533,7 @@
 %   such beasts.
 % \end{macro}
 %    \begin{macrocode}
-\newcommand\@fxdeclarecmdoptkey[3][]{%
-  \define@cmdkey[fx]{#2}{#3}[#1]
-  \DeclareOptionX[fx]<#2>{#3}[#1]{%
-    \@namedef{fx@#2@#3@cmd}{##1}}}
+\newcommand\@fxdeclarecmdoptkey[3][]{\define@cmdkey[fx]{#2}{#3}[#1]{}}
 
 %    \end{macrocode}
 %
@@ -1066,7 +1063,7 @@
     \fx@layout@marginclue{false}%
     \iffx@layout@margin%
       \fx@layout@margin{false}%
-      \@fxinnerfallbackcmd{\fx@layout@innerfallback@cmd}{true}%
+      \@fxinnerfallbackcmd{\cmdfx@layout@innerfallback}{true}%
     \fi%
   \fi}
 
