Require xkeyval no older than 2.5f (2006/11/18)

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -450,7 +450,7 @@
 %    \begin{macrocode}
 \RequirePackage{ifthen}
 \RequirePackage{verbatim}
-\RequirePackage{xkeyval}
+\RequirePackage{xkeyval}[2006/11/18]
 
 %    \end{macrocode}
 %
