--- a/fixme.dtx
+++ b/fixme.dtx
@@ -483,7 +483,7 @@
 
 %    \end{macrocode}
 % \begin{macro}{\@fxdeclarelegacybooloption}
-%   A ``legacy boolean option'' is a legacy |arg| option and its |noarg|
+%   A ``legacy boolean option'' is a legacy |opt| option and its |noopt|
 %   counterpart. Note that we don't really ensure the boolean status of these
 %   options anymore.
 % \end{macro}
