--- a/fixme.dtx
+++ b/fixme.dtx
@@ -522,12 +522,10 @@
 
 %    \end{macrocode}
 % \begin{macro}{\@fxdeclarecmdoptkey}
-%   A ``command option-key'' is a command (in the |xkeyval| sense) package
-%   option and macro key argument as well. Same comment as above for creating
-%   such beasts.
+%   A \fixme{} ``cmdkey'' is just like an \texttt{xkeyval} one:
 % \end{macro}
 %    \begin{macrocode}
-\newcommand\@fxdeclarecmdoptkey[3][]{\define@cmdkey[fx]{#2}{#3}[#1]{}}
+\newcommand\@fxdefinecmdkey[3][]{\define@cmdkey[fx]{#2}{#3}[#1]{}}
 
 %    \end{macrocode}
 %
@@ -914,7 +912,7 @@
 \@fxdefineboolkey{layout}{user}
 \@fxdefineboolkey{layout}{index}
 
-\@fxdeclarecmdoptkey[inline]{layout}{innerfallback}
+\@fxdefinecmdkey[inline]{layout}{innerfallback}
 \fx@layout@innerfallback{inline}
 
 %    \end{macrocode}
