--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1104,7 +1104,7 @@
   \@@fx@{#1}{#2}}
 \def\@fx#1[#2]#3{%
   \bgroup%
-  \setkeys[fx]{layout,log}{#2}%
+  \setkeys[fx]{layout,log,lang,ltx}{#2}%
   \@@fx{#1}{#3}%
   \egroup}
 
