Use proper grouping control sequences

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1103,10 +1103,10 @@
   \stepcounter{fx#1count}%
   \@@fx@{#1}{#2}}
 \def\@fx#1[#2]#3{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#2}%
   \@@fx{#1}{#3}%
-  \egroup}
+  \endgroup}
 
 %    \end{macrocode}
 % \begin{macro}{\fxnote}
@@ -1184,10 +1184,10 @@
   \stepcounter{fxfatalcount}%
   \@@@fxfatal{#1}}
 \def\@fxfatal[#1]#2{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@@fxfatal{#2}%
-  \egroup}
+  \endgroup}
 \DeclareRobustCommand\fxfatal{\@ifnextchar[%]
   {\@fxfatal}{\@@fxfatal}}
 
@@ -1238,29 +1238,29 @@
 % \subsubsection{User-level environments}
 %    \begin{macrocode}
 \newenvironment{anfxnote}[2][]{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@fxenvbegin{fxnote}{#2}}{%
   \@fxenvend%
-  \egroup}
+  \endgroup}
 \newenvironment{anfxwarning}[2][]{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@fxenvbegin{fxwarning}{#2}}{%
   \@fxenvend%
-  \egroup}
+  \endgroup}
 \newenvironment{anfxerror}[2][]{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@fxenvbegin{fxerror}{#2}}{%
   \@fxenvend%
-  \egroup}
+  \endgroup}
 \newenvironment{anfxfatal}[2][]{%
-  \bgroup%
+  \begingroup%
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@fxenvbegin{fxfatal}{#2}}{%
   \@fxenvend%
-  \egroup}
+  \endgroup}
 
 \@fxnewdeprecatedenv{afixme}{anfxfatal}
 
@@ -1428,7 +1428,7 @@
 % (patch submitted). Oh boy, these classes are a mess.
 %    \begin{macrocode}
 \ExecuteOptionsX[fx]<layout,log,lang,ltx>{final,english,nosilent,margin}
-\ProcessOptionsX*[fx]<legacy,layout,log,lang,ltx>
+\ProcessOptionsX*[fx]<layout,log,lang,legacy,ltx>
 
 %    \end{macrocode}
 %
